--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/1__l0vaIoI0RQu9_io9pJJIw.gif" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sprint 12"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/1__l0vaIoI0RQu9_io9pJJIw.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sprint 12"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
