--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Screenshot (551).png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Screenshot (551).jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Screenshot (551).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sprint 5"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Screenshot (551).jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sprint 5"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
